--- a/config/content.htm
+++ b/config/content.htm
@@ -1,3 +1,17 @@
+<h1>weeks</h1>
+<p>week1-5</p>
+<p>week6-10</p>
+<h2>week1-5</h2>
+<p>week1</p>
+<p>1.新建個人倉儲</p>
+<p>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git導入個人倉儲">https://github.com/mdecourse/cmsimde.git 導入個人倉儲</a></p>
+<p>3.將cmsimde中up dir資料夾內的資料複製進個人倉儲資料夾中</p>
+<p>4.提交推送至github</p>
+<p>5.完成</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J2tdoSOqVi8" width="550"></iframe>.</p>
+<p></p><h1>notes</h1>
+<p>About Dart</p>
+<p>About Class</p>
 <h1>About</h1>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4>利用 cmsimde 建立靜態網誌方法:</h4>
