--- a/content/notes.html
+++ b/content/notes.html
@@ -154,10 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='week1-5.html'>Next</a> >> week1-5<br /><h1>weeks</h1>
-<p>week1-5</p>
-<p>week6-10</p>
-<br /> <a href='week1-5.html'>Next</a> >> week1-5</div>
+    <div id="tipue_search_content">week1-5 << <a href='week1-5.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>notes</h1>
+<p>About Dart</p>
+<p>About Class</p>
+<br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
