--- a/content/week1-5.html
+++ b/content/week1-5.html
@@ -154,10 +154,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='week1-5.html'>Next</a> >> week1-5<br /><h1>weeks</h1>
-<p>week1-5</p>
-<p>week6-10</p>
-<br /> <a href='week1-5.html'>Next</a> >> week1-5</div>
+    <div id="tipue_search_content">weeks << <a href='weeks.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week1-5</h1>
+<p>week1</p>
+<p>1.新建個人倉儲</p>
+<p>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git導入個人倉儲">https://github.com/mdecourse/cmsimde.git 導入個人倉儲</a></p>
+<p>3.將cmsimde中up dir資料夾內的資料複製進個人倉儲資料夾中</p>
+<p>4.提交推送至github</p>
+<p>5.完成</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J2tdoSOqVi8" width="550"></iframe>.</p>
+<p></p><br />weeks << <a href='weeks.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
         
     <!-- footer -->
       <div class="container">
