add links in week1-5,week6-10

--- a/content/week1-5.html
+++ b/content/week1-5.html
@@ -157,7 +157,7 @@ img.add_border {
     <div id="tipue_search_content">weeks << <a href='weeks.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week1-5</h1>
 <p>week1</p>
 <p>1.新建個人倉儲</p>
-<p>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git導入個人倉儲">https://github.com/mdecourse/cmsimde.git 導入個人倉儲</a></p>
+<p>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git">https://github.com/mdecourse/cmsimde.git </a>導入個人倉儲</p>
 <p>3.將cmsimde中up dir資料夾內的資料複製進個人倉儲資料夾中</p>
 <p>4.提交推送至github</p>
 <p>5.完成</p>
