--- a/config/content.htm
+++ b/config/content.htm
@@ -1,10 +1,9 @@
 <h1>weeks</h1>
-<p>week1-5</p>
-<p>week6-10</p>
-<h2>week1-5</h2>
+<p><a href="https://s40723212.github.io/cd2020/content/week1-5.html">week1-5</a></p>
+<p><a href="https://s40723212.github.io/cd2020/content/week6-10.html">week6-10</a></p><h2>week1-5</h2>
 <p>week1</p>
 <p>1.新建個人倉儲</p>
-<p>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git導入個人倉儲">https://github.com/mdecourse/cmsimde.git 導入個人倉儲</a></p>
+<p>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git">https://github.com/mdecourse/cmsimde.git </a>導入個人倉儲</p>
 <p>3.將cmsimde中up dir資料夾內的資料複製進個人倉儲資料夾中</p>
 <p>4.提交推送至github</p>
 <p>5.完成</p>
