--- a/config/content.htm
+++ b/config/content.htm
@@ -11,7 +11,19 @@
 <p></p><h1>notes</h1>
 <p>About Dart</p>
 <p>About Class</p>
-<h1>About</h1>
+<h2>Dart</h2>
+<p><img alt="" height="274" src="/images/Untitled picture.png" width="550"/></p>
+<p>常見的code editor有<a href="https://code.visualstudio.com/" target="_blank">Visual Studio code</a>, <a href="https://www.jetbrains.com/idea/" target="_blank">IntelliJ</a>,和<a href="https://developer.android.com/studio/write/sample-code" target="_blank">Android Studio code</a></p>
+<p>These code editors are known as IDE(intergrated development environment). They have lots of feature that make writting code easy and efficient. In other words, they are design to make your coding life easier.</p><h3>IDE(intergrated development environment)</h3>
+<div style="direction: ltr; border-width: 100%;">
+<div style="direction: ltr; margin-top: 0in; margin-left: 0in; width: 7.302in;">
+<div style="direction: ltr; margin-top: 0in; margin-left: 0in; width: 7.302in;">
+<p lang="zh-TW" style="margin: 0in; line-height: 19pt; font-family: 標楷體; font-size: 12.0pt; color: #333333;"><span style="background: white;">以前的程式開發撰寫，一直到程式真正可用需要很多的軟體工具協助，例如撰寫程式碼需要一套類似文書處理器的軟體，我們稱編輯器（Editor）；程式寫好後需要編譯，就再需要一個編譯器（Compiler）；寫完的程式可能有一部分要跟其他程式連結在一起，又需要一個連結器（Linker）；這些都有了後，程式可能有錯誤，還需要除錯，就需要除錯器（Debugger）。</span></p>
+<p lang="zh-TW" style="margin: 0in; line-height: 19pt; font-family: 標楷體; font-size: 12.0pt; color: #333333;"><span style="background: white;">這一堆「器」，其實都是為了開發程式而存在的工具性軟體，是各自獨立、散落的，但因為每個都會用到，乾脆推出一個程式開發軟體，把上面這一堆「器」的功能一次都備齊了，這樣，在同一個程式操作畫面中，既可以編輯程式碼文字，也可以編譯、連結、除錯等，因為把原本各自散落的程式開發工具統整在一起，稱為整合（Integrated，大陸稱為：集成）。</span></p>
+<p lang="zh-TW" style="margin: 0in; line-height: 19pt; font-family: 標楷體; font-size: 12.0pt; color: #333333;"><span style="background: white;">簡單來說，合併Editor, Comploer, linker, Debugger工具軟體等功能稱為IDE</span>(intergrated development environment)</p>
+</div>
+</div>
+</div><h2>Class</h2><h1>About</h1>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4>利用 cmsimde 建立靜態網誌方法:</h4>
 <p>1. 在 github 建立倉儲, git clone 到近端</p>
