--- a/content/IDE(intergrated development environment).html
+++ b/content/IDE(intergrated development environment).html
@@ -154,10 +154,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p><br />About << <a href='About.html'>Previous</a> </div>
+    <div id="tipue_search_content">Dart << <a href='Dart.html'>Previous</a> <a href='Class.html'>Next</a> >> Class<br /><h1>IDE(intergrated development environment)</h1>
+<div style="direction: ltr; border-width: 100%;">
+<div style="direction: ltr; margin-top: 0in; margin-left: 0in; width: 7.302in;">
+<div style="direction: ltr; margin-top: 0in; margin-left: 0in; width: 7.302in;">
+<p lang="zh-TW" style="margin: 0in; line-height: 19pt; font-family: 標楷體; font-size: 12.0pt; color: #333333;"><span style="background: white;">以前的程式開發撰寫，一直到程式真正可用需要很多的軟體工具協助，例如撰寫程式碼需要一套類似文書處理器的軟體，我們稱編輯器（Editor）；程式寫好後需要編譯，就再需要一個編譯器（Compiler）；寫完的程式可能有一部分要跟其他程式連結在一起，又需要一個連結器（Linker）；這些都有了後，程式可能有錯誤，還需要除錯，就需要除錯器（Debugger）。</span></p>
+<p lang="zh-TW" style="margin: 0in; line-height: 19pt; font-family: 標楷體; font-size: 12.0pt; color: #333333;"><span style="background: white;">這一堆「器」，其實都是為了開發程式而存在的工具性軟體，是各自獨立、散落的，但因為每個都會用到，乾脆推出一個程式開發軟體，把上面這一堆「器」的功能一次都備齊了，這樣，在同一個程式操作畫面中，既可以編輯程式碼文字，也可以編譯、連結、除錯等，因為把原本各自散落的程式開發工具統整在一起，稱為整合（Integrated，大陸稱為：集成）。</span></p>
+<p lang="zh-TW" style="margin: 0in; line-height: 19pt; font-family: 標楷體; font-size: 12.0pt; color: #333333;"><span style="background: white;">簡單來說，合併Editor, Comploer, linker, Debugger工具軟體等功能稱為IDE</span>(intergrated development environment)</p>
+</div>
+</div>
+</div><br />Dart << <a href='Dart.html'>Previous</a> <a href='Class.html'>Next</a> >> Class</div>
         
     <!-- footer -->
       <div class="container">
