--- a/content/notes.html
+++ b/content/notes.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a></li></ul><li><a href='notes.html'>notes</a><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='IDE(intergrated development environment).html'>IDE(intergrated development environment)</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,10 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week1-5 << <a href='week1-5.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>notes</h1>
+    <div id="tipue_search_content">week1-5 << <a href='week1-5.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart<br /><h1>notes</h1>
 <p>About Dart</p>
 <p>About Class</p>
-<br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart</div>
         
     <!-- footer -->
       <div class="container">
