add links in about Dart&Class&IDE

--- a/content/notes.html
+++ b/content/notes.html
@@ -155,9 +155,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week1-5 << <a href='week1-5.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart<br /><h1>notes</h1>
-<p>About Dart</p>
-<p>About Class</p>
-<br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart</div>
+<p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
+<p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p><br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart</div>
         
     <!-- footer -->
       <div class="container">
