--- a/content/Class.html
+++ b/content/Class.html
@@ -154,7 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">IDE(intergrated development environment) << <a href='IDE(intergrated development environment).html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>Class</h1><br />IDE(intergrated development environment) << <a href='IDE(intergrated development environment).html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+    <div id="tipue_search_content">IDE(intergrated development environment) << <a href='IDE(intergrated development environment).html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>Class</h1>
+<br />IDE(intergrated development environment) << <a href='IDE(intergrated development environment).html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
