--- a/content/Dart.html
+++ b/content/Dart.html
@@ -157,7 +157,8 @@ img.add_border {
     <div id="tipue_search_content">notes << <a href='notes.html'>Previous</a> <a href='IDE(intergrated development environment).html'>Next</a> >> IDE(intergrated development environment)<br /><h1>Dart</h1>
 <p><img alt="" height="274" src="./../images/Untitled picture.png" width="550"/></p>
 <p>常見的code editor有<a href="https://code.visualstudio.com/" target="_blank">Visual Studio code</a>, <a href="https://www.jetbrains.com/idea/" target="_blank">IntelliJ</a>,和<a href="https://developer.android.com/studio/write/sample-code" target="_blank">Android Studio code</a></p>
-<p>These code editors are known as IDE(intergrated development environment). They have lots of feature that make writting code easy and efficient. In other words, they are design to make your coding life easier.</p><br />notes << <a href='notes.html'>Previous</a> <a href='IDE(intergrated development environment).html'>Next</a> >> IDE(intergrated development environment)</div>
+<p>These code editors are known as IDE(intergrated development environment). They have lots of feature that make writting code easy and efficient. In other words, they are design to make your coding life easier.</p>
+<br />notes << <a href='notes.html'>Previous</a> <a href='IDE(intergrated development environment).html'>Next</a> >> IDE(intergrated development environment)</div>
         
     <!-- footer -->
       <div class="container">
