--- a/content/index.html
+++ b/content/index.html
@@ -156,7 +156,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='week1-5.html'>Next</a> >> week1-5<br /><h1>weeks</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/week1-5.html">week1-5</a></p>
-<p><a href="https://s40723212.github.io/cd2020/content/week6-10.html">week6-10</a></p><br /> <a href='week1-5.html'>Next</a> >> week1-5</div>
+<p><a href="https://s40723212.github.io/cd2020/content/week6-10.html">week6-10</a></p>
+<br /> <a href='week1-5.html'>Next</a> >> week1-5</div>
         
     <!-- footer -->
       <div class="container">
