--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,12 +39,13 @@ CMSimfly 網際內容管理
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## CMSimfly 網際內容管理
+## 40723212網際內容管理
 
-### KMOLab
+### 李建杰
 
 <small>
 Created by [KMOLab](http://lab.kmol.info/)
+                 [40723212](https://s40723212.github.io/cd2020/content/index.html)
 </small>
 
 [CMSimfly 網誌](./../blog/index.html)
@@ -57,15 +58,24 @@ Created by [KMOLab](http://lab.kmol.info/)
 						
 <section data-markdown>
     <script type="text/template">
-# 投影片快捷鍵
+## week1
 
-* 利用箭頭上下前後換頁
-* 按 f 鍵進入全螢幕模式 (full screen)
-* 按 s 鍵可以顯示投影片筆記 (show)
-* 按 o 鍵可以切換單張或全域檢視 (overview)
-* 按 b 或 . 鍵可以切換螢幕黑屏 (black)
-* 按 Esc 可以退出全螢幕或全域檢視 (Escape)
+新建倉儲
 
+<iframe width="556" height="310" src="https://www.youtube.com/embed/J2tdoSOqVi8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </script>
+</section>
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+##week2
+
+亂數分組
+
+
+<iframe width="1003" height="538" src="https://www.youtube.com/embed/CKX9WwlHMjo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>S
     </script>
 </section>
 
