--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -10,7 +10,12 @@
 <p>5.完成</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J2tdoSOqVi8" width="550"></iframe>.</p>
 <p>week2</p>
-<p>亂數分組</p>
+<p><span>亂數分組必須注意下列事項 </span></p>
+<p><span>1.注意資料來源是否為https，否則將無法成功亂數分組</span></p>
+<p><span> 2.所有資料來源都來自http，也就是說輸出URL都在http，記得更改不要只有更改Dart的URL </span></p>
+<p><span>3.乙班名單<a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank">https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780 </a>          <a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="550"></iframe></p>
+<p>week3</p>
+<p></p>
 <h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
