--- a/content/Class.html
+++ b/content/Class.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='IDE(intergrated development environment).html'>IDE(intergrated development environment)</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">IDE(intergrated development environment) << <a href='IDE(intergrated development environment).html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>Class</h1>
-<br />IDE(intergrated development environment) << <a href='IDE(intergrated development environment).html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+    <div id="tipue_search_content">environment << <a href='environment.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>Class</h1>
+<br />environment << <a href='environment.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
