--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -55,11 +55,16 @@
 </tr>
 </tbody>
 </table>
-<h3>environment</h3>
-<p>Executing Script Online-Dartpad</p>
-<p><big><big><a href="https://dartpad.dartlang.org/html" target="_blank">DartPad</a></big></big></p>
-<p></p>
-<p>Using IDE to compile</p>
+<h3><big><big><big>environment</big></big></big></h3>
+<p><big><big>Executing Script Online-Dartpad</big></big></p>
+<p><big><a href="https://dartpad.dartlang.org/html" target="_blank">DartPad</a></big></p>
+<p><span>The Dart Editor executes the script and displays both HTML as well as console output. The online editor is shipped with a set of preset code samples.</span></p>
+<p>Dartpad also enables to code in a more restrictive fashion. This can be achieved by checking the Strong mode option on the bottom right of the editor. Strong mode helps with −</p>
+<ul class="list">
+<li>Stronger static and dynamic checking</li>
+<li>Idiomatic JavaScript code generation for better interoperability.</li>
+</ul>
+<p><big><big>Using IDE to compile</big></big></p>
 <p><img alt="" height="274" src="/images/Untitled picture.png" width="550"/></p>
 <p>常見的code editor有<a href="https://code.visualstudio.com/" target="_blank">Visual Studio code</a>, <a href="https://www.jetbrains.com/idea/" target="_blank">IntelliJ</a>,和<a href="https://developer.android.com/studio/write/sample-code" target="_blank">Android Studio code</a></p>
 <p>These code editors are known as IDE(intergrated development environment). They have lots of feature that make writting code easy and efficient. In other words, they are design to make your coding life easier.</p>
