--- a/reveal/index.html
+++ b/reveal/index.html
@@ -58,11 +58,6 @@ Created by [KMOLab](http://lab.kmol.info/)
 						
 <section data-markdown>
     <script type="text/template">
-## week1
-
-新建倉儲
-
-<iframe width="556" height="310" src="https://www.youtube.com/embed/J2tdoSOqVi8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </script>
 </section>
 
@@ -70,12 +65,17 @@ Created by [KMOLab](http://lab.kmol.info/)
 						
 <section data-markdown>
     <script type="text/template">
-##week2
+## week1
+
+新建倉儲
+
+<iframe width="556" height="310" src="https://www.youtube.com/embed/J2tdoSOqVi8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+## week2
 
 亂數分組
 
 
-<iframe width="1003" height="538" src="https://www.youtube.com/embed/CKX9WwlHMjo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>S
+<iframe width="1003" height="538" src="https://www.youtube.com/embed/CKX9WwlHMjo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </script>
 </section>
 
@@ -85,13 +85,13 @@ Created by [KMOLab](http://lab.kmol.info/)
     <script type="text/template">
 ##week3
 
-simulation translation(https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf)
+simulation translation (https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf)
 
 <small>
 note:
 1.注意資料來源是否為https，否則將無法成功亂數分組
 2.所有資料來源都來自http，也就是說輸出URL都在http，記得更改不要只有更改Dart的URL
-3.乙班名單(https://s1.mde.nfu.edu.tw:7443/?semester=1082&courseno=0780)
+3.乙班名單 (https://s1.mde.nfu.edu.tw:7443/?semester=1082&courseno=0780)
 </small>
     </script>
 </section>
@@ -104,8 +104,8 @@ note:
 
 Dart 基本概念翻譯
 
-Overview(https://s40723212.github.io/cd2020/content/overview.html)
-Environment(https://s40723212.github.io/cd2020/content/environment.html)
+Overview (https://s40723212.github.io/cd2020/content/overview.html)
+Environment (https://s40723212.github.io/cd2020/content/environment.html)
     </script>
 </section>
 
