--- a/reveal/index.html
+++ b/reveal/index.html
@@ -84,7 +84,7 @@ Created by [KMOLab](http://lab.kmol.info/)
     <script type="text/template">
 ## week3
 
-simulation translation (https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf)
+[simulation translation] (https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf)
 
 <small>
 note:
@@ -103,8 +103,8 @@ note:
 
 Dart 基本概念翻譯
 
-Overview (https://s40723212.github.io/cd2020/content/overview.html)
-Environment (https://s40723212.github.io/cd2020/content/environment.html)
+[Overview] (https://s40723212.github.io/cd2020/content/overview.html)
+[Environment] (https://s40723212.github.io/cd2020/content/environment.html)
     </script>
 </section>
 
