reveal week3 week4 typesetting

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -103,8 +103,8 @@ note:
 
 Dart 基本概念翻譯
 
-[Overview](https://s40723212.github.io/cd2020/content/overview.html)
-[Environment](https://s40723212.github.io/cd2020/content/environment.html)
+1.[Overview](https://s40723212.github.io/cd2020/content/overview.html)
+2.[Environment](https://s40723212.github.io/cd2020/content/environment.html)
     </script>
 </section>
 
