reveal week3 week4 typesetting

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -103,9 +103,9 @@ note:
 
 Dart 基本概念翻譯
 
-1.[Overview](https://s40723212.github.io/cd2020/content/overview.html)
+[Overview](https://s40723212.github.io/cd2020/content/overview.html)
 
-2.[Environment](https://s40723212.github.io/cd2020/content/environment.html)
+[Environment](https://s40723212.github.io/cd2020/content/environment.html)
     </script>
 </section>
 
