--- a/content/week6-10.html
+++ b/content/week6-10.html
@@ -154,10 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week6-10 << <a href='week6-10.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart<br /><h1>notes</h1>
-<p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
-<p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
-<br />week6-10 << <a href='week6-10.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart</div>
+    <div id="tipue_search_content">week1-5 << <a href='week1-5.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week6-10</h1>
+<p>week6</p>
+<p>抽查影片<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
+<br />week1-5 << <a href='week1-5.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
         
     <!-- footer -->
       <div class="container">
