--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -11,12 +11,30 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J2tdoSOqVi8" width="550"></iframe>.</p>
 <p>week2</p>
 <p><span>亂數分組必須注意下列事項 </span></p>
-<p><span>1.注意資料來源是否為https，否則將無法成功亂數分組</span></p>
+<p><br/>1.注意資料來源是否為https，否則將無法成功亂數分組</p>
 <p><span> 2.所有資料來源都來自http，也就是說輸出URL都在http，記得更改不要只有更改Dart的URL </span></p>
 <p><span>3.乙班名單<a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank">https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780 </a>          <a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="550"></iframe></p>
 <p>week3</p>
 <p>simulation translation :<a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a></p>
-<h1>notes</h1>
+<p>Assignment 1:</p>
+<p>Due March 25, 2020 for class 2a and March 26, 2020 for class 2b.</p>
+<ol>
+<li>Describe how to do an efficient random grouping for this course or do the roll calling randomly?</li>
+<li>Describe how to prepare a portable Python programming system for Windows 10 64bit system to allow one the maintain CMSiMDE website, Pelican blog and Reveal.js presentation on Github?</li>
+<li>What do you need to know from <a href="http://www.coppeliarobotics.com/helpFiles/index.html">http://www.coppeliarobotics.com/helpFiles/index.html</a>to implement a four-wheeled robot?</li>
+</ol>
+<p>亂數分組要注意下列事項</p>
+<ul>
+<li><span>注意資料來源是否為</span>https<span>，否則將無法成功亂數分組</span></li>
+<li><span>所有資料來源都來自</span>http<span>，也就是說輸出</span>URL<span>都在</span>http<span>，記得更改不要只有更改</span>Dart<span>的</span>URL</li>
+<li><span>乙班名單</span><a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780">https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a></li>
+</ul>
+<p> 可攜系統升級python 3.8<span>注意事項</span></p>
+<ul>
+<li>安裝python <span>時先不要安裝</span>pip<span>檔，若是將</span>pip<span>檔打勾那下載下來</span>python 3.8.exe<span>裡面就會有</span>pip<span>檔</span></li>
+<li>安裝好沒有pip<span>檔的</span>python <span>之後再輸入</span>python -m pip install</li>
+</ul>
+<p><span>翻譯四輪車</span><br/><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a></p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
@@ -55,7 +73,7 @@
 </tr>
 </tbody>
 </table>
-<h3><big><big><big>environment</big></big></big></h3>
+<h3>environment</h3>
 <p><big><big>Executing Script Online-Dartpad</big></big></p>
 <p><big><a href="https://dartpad.dartlang.org/html" target="_blank">DartPad</a></big></p>
 <p><span>The Dart Editor executes the script and displays both HTML as well as console output. The online editor is shipped with a set of preset code samples.</span></p>
