--- a/content/week1-5.html
+++ b/content/week1-5.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">weeks << <a href='weeks.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week1-5</h1>
+    <div id="tipue_search_content">weeks << <a href='weeks.html'>Previous</a> <a href='week6-10.html'>Next</a> >> week6-10<br /><h1>week1-5</h1>
 <p>week1</p>
 <p>1.新建個人倉儲</p>
 <p>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git">https://github.com/mdecourse/cmsimde.git </a>導入個人倉儲</p>
@@ -187,7 +187,8 @@ img.add_border {
 <li>安裝python <span>時先不要安裝</span>pip<span>檔，若是將</span>pip<span>檔打勾那下載下來</span>python 3.8.exe<span>裡面就會有</span>pip<span>檔</span></li>
 <li>安裝好沒有pip<span>檔的</span>python <span>之後再輸入</span>python -m pip install</li>
 </ul>
-<p><span>翻譯四輪車</span><br/><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a></p><br />weeks << <a href='weeks.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
+<p><span>翻譯四輪車</span><br/><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a></p>
+<br />weeks << <a href='weeks.html'>Previous</a> <a href='week6-10.html'>Next</a> >> week6-10</div>
         
     <!-- footer -->
       <div class="container">
