--- a/config/content.htm
+++ b/config/content.htm
@@ -104,3 +104,5 @@
 </div>
 </div>
 <h2>Class</h2>
+<h1>About</h1>
+<p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p>
