--- a/content/About.html
+++ b/content/About.html
@@ -154,10 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week6-10 << <a href='week6-10.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart<br /><h1>notes</h1>
-<p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
-<p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
-<br />week6-10 << <a href='week6-10.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart</div>
+    <div id="tipue_search_content">Class << <a href='Class.html'>Previous</a> <br /><h1>About</h1>
+<p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p><br />Class << <a href='Class.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
