week3.4 粉組內容討論

--- a/content/week1-5.html
+++ b/content/week1-5.html
@@ -167,7 +167,7 @@ img.add_border {
 <p><br/>1.注意資料來源是否為https，否則將無法成功亂數分組</p>
 <p><span> 2.所有資料來源都來自http，也就是說輸出URL都在http，記得更改不要只有更改Dart的URL </span></p>
 <p><span>3.乙班名單<a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank">https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780 </a>          <a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="550"></iframe></p>
-<p>week3</p>
+<p>week3.4</p>
 <p>simulation translation :<a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a></p>
 <p>Assignment 1:</p>
 <p>Due March 25, 2020 for class 2a and March 26, 2020 for class 2b.</p>
@@ -187,8 +187,20 @@ img.add_border {
 <li>安裝python <span>時先不要安裝</span>pip<span>檔，若是將</span>pip<span>檔打勾那下載下來</span>python 3.8.exe<span>裡面就會有</span>pip<span>檔</span></li>
 <li>安裝好沒有pip<span>檔的</span>python <span>之後再輸入</span>python -m pip install</li>
 </ul>
-<p><span>翻譯四輪車</span><br/><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a></p>
-<br />weeks << <a href='weeks.html'>Previous</a> <a href='week6-10.html'>Next</a> >> week6-10</div>
+<p><span>翻譯四輪車</span><br/><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a> </p>
+<p><big><big>分組報告</big></big></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/r0AABAp474U" width="550"></iframe></p>
+<p><span>40623115 亂數分組程式</span></p>
+<p><span>40623251可攜系統</span></p>
+<p><span>40723204可攜系統</span></p>
+<p><span>40723210四輪車</span></p>
+<p><span>40723212四輪車</span></p>
+<p><span>40723225四輪車</span></p>
+<p><span>40723232亂數分組程式</span></p>
+<p><span>40723234可攜系統</span></p>
+<p><span>40723238四輪車</span></p>
+<p><span>40723245亂數分組程式</span></p>
+<p><span>40723250亂數分組程式</span></p><br />weeks << <a href='weeks.html'>Previous</a> <a href='week6-10.html'>Next</a> >> week6-10</div>
         
     <!-- footer -->
       <div class="container">
