--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -36,6 +36,7 @@
 </ul>
 <p><span>翻譯四輪車</span><br/><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a> </p>
 <p><big><big>分組報告</big></big></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/r0AABAp474U" width="550"></iframe></p>
 <p><span>40623115 亂數分組程式</span></p>
 <p><span>40623251可攜系統</span></p>
 <p><span>40723204可攜系統</span></p>
@@ -48,8 +49,11 @@
 <p><span>40723245亂數分組程式</span></p>
 <p><span>40723250亂數分組程式</span></p><h2>week6-10</h2>
 <p>week6</p>
-<p>抽查影片<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
-<h1>notes</h1>
+<p>抽查影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
+<p>week7</p>
+<p><span>協同產品設計實習 Assignment 2 工作分配與問題討論</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EVC9ZV_4RG0" width="500"></iframe></p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
