--- a/config/content.htm
+++ b/config/content.htm
@@ -49,8 +49,29 @@
 <p><span>40723245亂數分組程式</span></p>
 <p><span>40723250亂數分組程式</span></p><h2>week6-10</h2>
 <p>week6</p>
-<p>抽查影片<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
-<h1>notes</h1>
+<p>抽查影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
+<p>week7</p>
+<p><span>協同產品設計實習 Assignment 2 工作分配與問題討論</span></p>
+<div class="trpContentPanel" id="content-wrapper">
+<div class="trpChatPanel">
+<div aria-atomic="false" aria-live="polite" aria-relevant="additions text" class="trpChatContainer primary-scroll chat-container scroller" id="content-frame" role="log">
+<div class="" id="chat-container">
+<div>
+<div class="chat-item model-id-5e932662f87c5956a252f77a burstStart">
+<div class="chat-item__container">
+<div class="chat-item__content">
+<div class="chat-item__text js-chat-item-text">Topic 1:<br/>40623115<br/>40623251<br/>40723204<br/>42723210<br/>40723212<br/>40723225</div>
+<div class="chat-item__text js-chat-item-text"><br/>Topic 0:<br/>40723232<br/>40723234<br/>40723238<br/>40723245<br/>40723250</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EVC9ZV_4RG0" width="500"></iframe></p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
