--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -51,18 +51,37 @@
 <p>week6</p>
 <p>抽查影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
+<hr/>
 <p>week7</p>
 <p><span>協同產品設計實習 Assignment 2 工作分配與問題討論</span></p>
 <div class="trpContentPanel" id="content-wrapper">
 <div class="trpChatPanel">
 <div aria-atomic="false" aria-live="polite" aria-relevant="additions text" class="trpChatContainer primary-scroll chat-container scroller" id="content-frame" role="log">
 <div class="" id="chat-container">
-<div>
 <div class="chat-item model-id-5e932662f87c5956a252f77a burstStart">
 <div class="chat-item__container">
 <div class="chat-item__content">
-<div class="chat-item__text js-chat-item-text">Topic 1:<br/>40623115<br/>40623251<br/>40723204<br/>42723210<br/>40723212<br/>40723225</div>
-<div class="chat-item__text js-chat-item-text"><br/>Topic 0:<br/>40723232<br/>40723234<br/>40723238<br/>40723245<br/>40723250</div>
+<div class="chat-item__text js-chat-item-text"></div>
+<div class="chat-item__text js-chat-item-text">
+<table>
+<tbody>
+<tr>
+<td style="text-align: left;">Topic 1:<br/>40623115<br/>40623251<br/>40723204<br/>42723210<br/>40723212<br/>40723225</td>
+<td style="text-align: left;">
+<div class="trpContentPanel" id="content-wrapper">
+<div class="trpChatPanel">
+<div aria-atomic="false" aria-live="polite" aria-relevant="additions text" class="trpChatContainer primary-scroll chat-container scroller" id="content-frame" role="log">
+<div class="" id="chat-container" style="text-align: left;">Topic 0:</div>
+<div class="" style="text-align: left;">40723232<br/>40723234<br/>40723238<br/>40723245<br/>40723250<br/><br/></div>
+</div>
+</div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="chat-item__text js-chat-item-text"></div>
 </div>
 </div>
 </div>
@@ -70,16 +89,18 @@
 </div>
 </div>
 </div>
-</div>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EVC9ZV_4RG0" width="500"></iframe></p><h1>notes</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EVC9ZV_4RG0" width="500"></iframe></p>
+<p>課堂抽查直播影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-2HgGF__3qQ" width="500"></iframe></p>
+<hr/>
+<p></p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
-<p>overview</p>
-<p>environment</p>
+<p><a href="https://s40723212.github.io/cd2020/content/overview.html" target="_blank">overview</a></p>
+<p><a href="https://s40723212.github.io/cd2020/content/environment.html" target="_blank">environment</a></p>
 <p></p>
-<p></p>
-<h3>overview</h3>
+<p></p><h3>overview</h3>
 <p>Dart is an object-orented langule with C styie syntax which can optionally trans compile into Javascript.<br/>Dart 是一種物基於C語法所產稱的件導向語言，其功能可將其語言轉換成Javascript</p>
 <p><span>compares the features of Dart and JavaScript.</span><br/>下表為Dart跟Javascript的差異比較</p>
 <table class="table table-bordered">
