--- a/content/Dart.html
+++ b/content/Dart.html
@@ -155,11 +155,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">notes << <a href='notes.html'>Previous</a> <a href='overview.html'>Next</a> >> overview<br /><h1>Dart</h1>
-<p>overview</p>
-<p>environment</p>
+<p><a href="https://s40723212.github.io/cd2020/content/overview.html" target="_blank">overview</a></p>
+<p><a href="https://s40723212.github.io/cd2020/content/environment.html" target="_blank">environment</a></p>
 <p></p>
-<p></p>
-<br />notes << <a href='notes.html'>Previous</a> <a href='overview.html'>Next</a> >> overview</div>
+<p></p><br />notes << <a href='notes.html'>Previous</a> <a href='overview.html'>Next</a> >> overview</div>
         
     <!-- footer -->
       <div class="container">
