--- a/content/week6-10.html
+++ b/content/week6-10.html
@@ -173,8 +173,8 @@ img.add_border {
 <table>
 <tbody>
 <tr>
-<td style="text-align: right;">Topic 1:<br/>40623115<br/>40623251<br/>40723204<br/>42723210<br/>40723212<br/>40723225</td>
-<td>
+<td style="text-align: left;">Topic 1:<br/>40623115<br/>40623251<br/>40723204<br/>42723210<br/>40723212<br/>40723225</td>
+<td style="text-align: left;">
 <div class="trpContentPanel" id="content-wrapper">
 <div class="trpChatPanel">
 <div aria-atomic="false" aria-live="polite" aria-relevant="additions text" class="trpChatContainer primary-scroll chat-container scroller" id="content-frame" role="log">
