--- a/config/content.htm
+++ b/config/content.htm
@@ -8,12 +8,14 @@
 <p>3.將cmsimde中up dir資料夾內的資料複製進個人倉儲資料夾中</p>
 <p>4.提交推送至github</p>
 <p>5.完成</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J2tdoSOqVi8" width="550"></iframe>.</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J2tdoSOqVi8" width="550"></iframe></p>
+<hr/>
 <p>week2</p>
 <p><span>亂數分組必須注意下列事項 </span></p>
 <p><br/>1.注意資料來源是否為https，否則將無法成功亂數分組</p>
 <p><span> 2.所有資料來源都來自http，也就是說輸出URL都在http，記得更改不要只有更改Dart的URL </span></p>
 <p><span>3.乙班名單<a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank">https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780 </a>          <a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="550"></iframe></p>
+<hr/>
 <p>week3.4</p>
 <p>simulation translation :<a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a></p>
 <p>Assignment 1:</p>
@@ -47,7 +49,16 @@
 <p><span>40723234可攜系統</span></p>
 <p><span>40723238四輪車</span></p>
 <p><span>40723245亂數分組程式</span></p>
-<p><span>40723250亂數分組程式</span></p><h2>week6-10</h2>
+<p><span>40723250亂數分組程式</span></p>
+<hr/>
+<p>week5</p>
+<p>使用obs來直播</p>
+<p>obs載點:<a href="https://cdn-fastly.obsproject.com/downloads/OBS-Studio-25.0.4-Full-Installer-x64.exe" target="_blank">win10</a> <a href="https://cdn-fastly.obsproject.com/downloads/obs-mac-25.0.7.dmg" target="_blank">macOS</a> <a href="https://obsproject.com/wiki/install-instructions#linux" target="_blank">Linux</a></p>
+<p>ivcam載點: <a href="https://www.e2esoft.com/download/ivcam-x64" target="_blank">win10</a> <a href="https://play.google.com/store/apps/details?id=com.e2esoft.ivcam" target="_blank">Android</a> <a href="https://itunes.apple.com/app/ivcam-webcam/id1164464478?mt=8" target="_blank">ios</a></p>
+<p>前置作業</p>
+<p>1.下載電腦作業系統對應的obs</p>
+<p>2.通過youtube實名驗證，並等待24小時使其開通</p>
+<p>3.開啟前置鏡頭，若無電腦無前置鏡頭可用ivcam來替代</p><h2>week6-10</h2>
 <p>week6</p>
 <p>抽查影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hjRtGgb6DC4" width="550"></iframe></p>
@@ -66,8 +77,8 @@
 <table>
 <tbody>
 <tr>
-<td style="text-align: right;">Topic 1:<br/>40623115<br/>40623251<br/>40723204<br/>42723210<br/>40723212<br/>40723225</td>
-<td>
+<td style="text-align: left;">Topic 1:<br/>40623115<br/>40623251<br/>40723204<br/>42723210<br/>40723212<br/>40723225</td>
+<td style="text-align: left;">
 <div class="trpContentPanel" id="content-wrapper">
 <div class="trpChatPanel">
 <div aria-atomic="false" aria-live="polite" aria-relevant="additions text" class="trpChatContainer primary-scroll chat-container scroller" id="content-frame" role="log">
@@ -97,11 +108,10 @@
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
-<p>overview</p>
-<p>environment</p>
+<p><a href="https://s40723212.github.io/cd2020/content/overview.html" target="_blank">overview</a></p>
+<p><a href="https://s40723212.github.io/cd2020/content/environment.html" target="_blank">environment</a></p>
 <p></p>
-<p></p>
-<h3>overview</h3>
+<p></p><h3>overview</h3>
 <p>Dart is an object-orented langule with C styie syntax which can optionally trans compile into Javascript.<br/>Dart 是一種物基於C語法所產稱的件導向語言，其功能可將其語言轉換成Javascript</p>
 <p><span>compares the features of Dart and JavaScript.</span><br/>下表為Dart跟Javascript的差異比較</p>
 <table class="table table-bordered">
