week python remote api 環境參數設置 & Update vrep

--- a/content/week1-5.html
+++ b/content/week1-5.html
@@ -156,40 +156,57 @@ img.add_border {
         </header>
     <div id="tipue_search_content">weeks << <a href='weeks.html'>Previous</a> <a href='week6-10.html'>Next</a> >> week6-10<br /><h1>week1-5</h1>
 <p>week1</p>
-<p>1.新建個人倉儲</p>
-<p>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git">https://github.com/mdecourse/cmsimde.git </a>導入個人倉儲</p>
-<p>3.將cmsimde中up dir資料夾內的資料複製進個人倉儲資料夾中</p>
-<p>4.提交推送至github</p>
-<p>5.完成</p>
+<blockquote>1.新建個人倉儲</blockquote>
+<blockquote>2.使用git submodule add <a href="https://github.com/mdecourse/cmsimde.git">https://github.com/mdecourse/cmsimde.git </a>導入個人倉儲</blockquote>
+<blockquote>3.將cmsimde中up dir資料夾內的資料複製進個人倉儲資料夾中</blockquote>
+<blockquote>4.提交推送至github</blockquote>
+<blockquote>5.完成</blockquote>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J2tdoSOqVi8" width="550"></iframe></p>
 <hr/>
 <p>week2</p>
-<p><span>亂數分組必須注意下列事項 </span></p>
-<p><br/>1.注意資料來源是否為https，否則將無法成功亂數分組</p>
-<p><span> 2.所有資料來源都來自http，也就是說輸出URL都在http，記得更改不要只有更改Dart的URL </span></p>
-<p><span>3.乙班名單<a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank">https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780 </a>          <a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="550"></iframe></p>
+<p>亂數分組必須注意下列事項</p>
+<blockquote>
+<blockquote>1.注意資料來源是否為https，否則將無法成功亂數分組</blockquote>
+</blockquote>
+<blockquote>
+<blockquote>2.所有資料來源都來自http，也就是說輸出URL都在http，記得更改不要只有更             Dart的URL</blockquote>
+</blockquote>
+<blockquote>
+<blockquote>3.乙班名單<a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780 </a>                              <a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780" target="_blank"> https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="550"></iframe></blockquote>
+</blockquote>
 <hr/>
 <p>week3.4</p>
-<p>simulation translation :<a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a></p>
-<p>Assignment 1:</p>
+<p><strong>Assignment 1:</strong></p>
 <p>Due March 25, 2020 for class 2a and March 26, 2020 for class 2b.</p>
-<ol>
+<blockquote>
+<ul>
 <li>Describe how to do an efficient random grouping for this course or do the roll calling randomly?</li>
+</ul>
+<blockquote>
+<ul>
 <li>Describe how to prepare a portable Python programming system for Windows 10 64bit system to allow one the maintain CMSiMDE website, Pelican blog and Reveal.js presentation on Github?</li>
+</ul>
+<blockquote>
+<ul>
 <li>What do you need to know from <a href="http://www.coppeliarobotics.com/helpFiles/index.html">http://www.coppeliarobotics.com/helpFiles/index.html</a>to implement a four-wheeled robot?</li>
-</ol>
-<p>亂數分組要注意下列事項</p>
+</ul>
+</blockquote>
+</blockquote>
+</blockquote>
+<p><strong>亂數分組要注意下列事項</strong></p>
 <ul>
 <li><span>注意資料來源是否為</span>https<span>，否則將無法成功亂數分組</span></li>
 <li><span>所有資料來源都來自</span>http<span>，也就是說輸出</span>URL<span>都在</span>http<span>，記得更改不要只有更改</span>Dart<span>的</span>URL</li>
 <li><span>乙班名單</span><a href="https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780">https://s1.mde.nfu.edu.tw:7443/?semester=1082&amp;courseno=0780</a></li>
 </ul>
-<p> 可攜系統升級python 3.8<span>注意事項</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CKX9WwlHMjo" width="500"></iframe></p>
+<p> <strong>可攜系統升級python 3.8注意事項</strong></p>
 <ul>
 <li>安裝python <span>時先不要安裝</span>pip<span>檔，若是將</span>pip<span>檔打勾那下載下來</span>python 3.8.exe<span>裡面就會有</span>pip<span>檔</span></li>
 <li>安裝好沒有pip<span>檔的</span>python <span>之後再輸入</span>python -m pip install</li>
+<li>安裝軟體包 python pip install<span style="background-color: #ffffff; color: #ff0000;"> Flask Mardown lxml bs4 flask_cors pelican leo</span></li>
 </ul>
-<p><span>翻譯四輪車</span><br/><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf">https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf</a> </p>
+<p><strong><a href="https://github.com/s40723212/cd2020/blob/master/downloads/Simulation%20translation.pdf" target="_blank"> simulation translation 翻譯四輪車</a></strong></p>
 <p><big><big>分組報告</big></big></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/r0AABAp474U" width="550"></iframe></p>
 <p><span>40623115 亂數分組程式</span></p>
